[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/basic_test_level.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://levels/trivial_test_level.tscn" type="PackedScene" id=4]
[ext_resource path="res://snayk_growing_on_me.mp3" type="AudioStream" id=5]
[ext_resource path="res://slap.wav" type="AudioStream" id=6]
[ext_resource path="res://SourceSansPro-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://levels/harder_test_level.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.4, 0.4, 0.4 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_cull_mode = 1
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 7 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )
levels = [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 8 ) ]

[node name="Level" type="Spatial" parent="."]

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.84051, 0.541796, 0, -0.541796, 0.84051, 0, 5.44374, 6.47226 )
fov = 50.0
target = NodePath("../Player/CameraBase/CameraTarget")
speed = 3.0
enabled = true

[node name="Player" type="KinematicBody" parent="." groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.401, 0 )
collision_layer = 17
collision_mask = 17
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
shape = SubResource( 5 )

[node name="EnemyDetector" type="Area" parent="Player"]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="Player/EnemyDetector"]
shape = SubResource( 5 )

[node name="DarkBox" type="CSGBox" parent="Player"]
cast_shadow = 0
width = 0.8
height = 0.8
depth = 0.8
material = SubResource( 3 )

[node name="LightBox" type="CSGBox" parent="Player"]
cast_shadow = 0
width = 0.75
height = 0.75
depth = 0.75
material = SubResource( 4 )

[node name="ShadowBox" type="CSGBox" parent="Player"]
cast_shadow = 3
width = 0.8
height = 0.8
depth = 0.8
material = SubResource( 3 )

[node name="ShadowBox2" type="CSGBox" parent="Player/ShadowBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 0.00999999, 0.01 )
cast_shadow = 3
operation = 2
width = 0.8
height = 0.8
depth = 0.8
material = SubResource( 3 )

[node name="MoveGuide" type="Spatial" parent="Player"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )

[node name="CameraBase" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="CameraTarget" type="Spatial" parent="Player/CameraBase"]
transform = Transform( 1, 0, 0, 0, 0.84051, 0.541796, 0, -0.541796, 0.84051, 0, 5.44374, 6.47226 )

[node name="CoyoteTime" type="Timer" parent="Player"]
wait_time = 0.05
one_shot = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.875, 0.129409, 0.466506, -0.466506, 0.482963, 0.741025, -0.12941, -0.866025, 0.482963, 0, 0, 0 )
light_energy = 0.5
shadow_enabled = true
shadow_bias = 0.0
shadow_reverse_cull_face = true
directional_shadow_mode = 0
directional_shadow_normal_bias = 0.0
directional_shadow_depth_range = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
autoplay = true

[node name="Slap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0

[node name="InfoLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="WinLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -7.0
margin_right = 28.5
margin_bottom = 7.0
text = "You won!"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="FailsText" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -137.0
margin_right = -79.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
text = "FAILS:"

[node name="FailsCount" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_right = 16.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="LevelText" type="Label" parent="."]
margin_left = 7.0
margin_right = 92.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
text = "LEVEL:"

[node name="LevelNumber" type="Label" parent="."]
margin_left = 100.0
margin_right = 166.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
text = "1"

[connection signal="player_died" from="Player" to="." method="_on_Player_player_died"]
[connection signal="body_entered" from="Player/EnemyDetector" to="Player" method="_on_EnemyDetector_body_entered"]
